# bingdiyi

./: .clang-format  .gitignore  AUTHORS  COPYING  Makefile.am  README.md  config.json  configure.ac
bxcfg/: bx-test-v3.cfg  bx-test-v4.cfg  bx-testnet.cfg
doc/: HowToLockFunds.docx  javascript_cltv_example.js  manual_cltv.txt  manual_cltv_working.txt  manual_cltv_working_removeme_001.txt  manual_cltv_working_summary.txt  raw-transaction-instructions.txt  transaction-via-command-line.txt  understanding_manual_cltv.docx
src/: FundsFinder.cpp  FundsFinder.hpp  UnlockingTxCreator.cpp  UnlockingTxCreator.hpp  autopusher.cpp  bing_client.cpp  bing_client.hpp  eclient.cpp  electrum_client.cpp  electrum_client.hpp  frozen_utxo_tx_producer.cpp  frozen_utxo_tx_producer2.cpp  frozen_utxo_tx_unfreezer.cpp  frozen_utxo_tx_unfreezer2.cpp  funds_finder.cpp  funds_finder.hpp  hodl_creator.cpp  hodl_creator2.cpp  hodl_spender.cpp  hodl_spender2.cpp  hodler.cpp  json_socket_client.cpp  locked_tx_autopusher.cpp  locked_tx_autopusher2.cpp  locked_tx_autopusher_seed.cpp  locked_tx_pusher.cpp  locked_tx_spender.cpp  main.cpp  purse_accessor.cpp  purse_accessor.hpp  raw_transaction_producer.cpp  redeem_script.cpp  redeem_script.hpp  unlocking_tx_creator.cpp  unlocking_tx_creator.hpp
src/cmdtool/: address_spkh.cpp  balance.cpp  history.cpp  history_ronghua.cpp  locked_tx_autopusher.cpp  locked_tx_autopusher2.cpp  locked_tx_autopusher_seed.cpp  locked_tx_pusher.cpp  locked_tx_spender.cpp  p2pkh_tx_autopusher.cpp  p2pkh_tx_pusher.cpp  raw_transaction_producer.cpp  ronghua_client_provider.hpp
src/common/: bing_common.hpp
src/config/: bing_config.cpp  bing_config.hpp
src/electrumclient/: eclient.cpp  electrum_api_client.cpp  electrum_api_client.hpp  electrum_client.cpp  electrum_client.hpp
src/historyinspector/: history_inspector.cpp  history_inspector.hpp
src/libbfunds/: purse_accessor.cpp  purse_accessor.hpp
src/libbitcoinclient/: bing_client.cpp  bing_client.hpp  lclient.cpp  libb_client.cpp  libb_client.hpp
src/locktx/: autopusher.cpp  autopusher.hpp  online_lock_tx_creator.cpp  online_lock_tx_creator.hpp
src/p2pkhtx/: online_p2pkh_tx_creator.cpp  online_p2pkh_tx_creator.hpp
src/walletstate/: wallet_state.cpp  wallet_state.hpp
test/utility/: address_converter.cpp
